<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="project_one_message">This button will launch my Spotify Streamer App!</string>
    <string name="project_two_message">This button will launch my Football Scores App!</string>
    <string name="project_three_message">This button will launch my Library App!</string>
    <string name="project_four_message">This button will launch my Build It Bigger App!</string>
    <string name="project_five_message">This button will launch my XYZ Reader App!</string>
    <string name="project_six_message">This button will launch my Capstone App!</string>

    <string name="project_one">SPOTIFY STREAMER</string>
    <string name="project_two">SCORES APP</string>
    <string name="project_three">LIBRARY APP</string>
    <string name="project_four">BUILD IT BIGGER</string>
    <string name="project_five">XYZ READER</string>
    <string name="project_six">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_spotify_streamer">Spotify Streamer</string>
    <string name="search_artist_hint">Search Artist...</string>
    <string name="search_artist_label">search artist label</string>
</resources>
