<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainActivityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/MainActivityHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_project_one"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_one" />

        <Button
            android:id="@+id/btn_project_two"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_two" />

        <Button
            android:id="@+id/btn_project_three"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_three" />

        <Button
            android:id="@+id/btn_project_four"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_four" />

        <Button
            android:id="@+id/btn_project_five"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_five" />

        <Button
            android:id="@+id/btn_project_six"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_capstone"
            android:text="@string/project_six"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
